# Nucleo-Shield

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  Astrea.ioc  Astreatest Debug.launch  Astreatest.ioc  CMakeLists.txt  CMakePresets.json  Makefile  Nucleo-Shield.ioc  README.md  STM32-for-VSCode.config.yaml  STM32F446RETx_FLASH.ld  STM32Make.make  Untitled Diagram.drawio  gcc-arm-none-eabi.cmake  openocd.cfg  test.c
.github/workflows/: cmake-single-platform.yml  eslint.yml
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: asdasdasdasdasd.1714760817246.pdom  asdasdasdasdasd.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/asdasdasdasdasd/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/asdasdasdasdasd/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
App/: app.cpp
App/Recorder/: recorder.cpp
App/Recorder/LFS/: lfs_adapter.cpp  lfs_adapter.hpp
App/Serial/: serial.cpp  serial.hpp
Core/Inc/: main.h  pins.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: gpio.c  main.c  main.cpp  pins.c  quadspi.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usb_otg.c
Debug/: Astreatest.elf  Astreatest.list  Astreatest.map  makefile  objects.list
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_hal_timebase_tim.d  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_pcd.d  stm32f4xx_hal_pcd_ex.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_qspi.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_spi.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_ll_usb.d  subdir.mk
Debug/FATFS/App/: subdir.mk
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Drivers/LPS22HB/: LPS22HB.cpp  LPS22HB.hpp
Drivers/SX1280/: pin.hpp  rflink.cpp  rflink.h  rfmodule.h  sx1280.cpp
Drivers/W25Q/: W25Q.cpp  W25Q.hpp  libs.h
Inc/: ffconf.h  stm32f4xx_hal_conf.h
Src/: main.c  stm32f4xx_hal_msp.c
Test/: testing.md  tests.cpp  tests.hpp
Test/LPS22HB/: LPS22HB_test.cpp  LPS22HB_test.hpp
Test/LittleFS/: littleFS_test.hpp  littleFs_test.cpp
USB_DEVICE/App/: usbd_storage_if.c
app/: app.cpp  app.h  app.hpp
app/Inc/: app.hpp  rflink.h  servo.h  stm32f4xx_radio.h
app/Recorder/: recorder.md
app/Src/: app.cpp  rflink.cpp  servo.cpp
libs/LPS22HB/: LPS22HB.cpp  LPS22HB.h
libs/sx1280/: rfmodule.h  sx1280.cpp  sx1280.h
scripts/openocd/: flash.sh
scripts/test/: tester.py  tester.sh
templates/: c_cpp_properties.json  makefile_template
